<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/my_nano"
        style="@style/Mynanoapp_txtstyle" />

    <!-- Button layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/acty_main_btnslayout_marginTop">

        <Button
            android:id="@+id/spotify_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/spotify"/>

        <Button
            android:id="@+id/scores_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/scores"/>

        <Button
            android:id="@+id/library_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/library"/>

        <Button
            android:id="@+id/bigger_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/build"/>

        <Button
            android:id="@+id/xyz_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/xyz"/>

        <Button
            android:id="@+id/capstone_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_capstone_button"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/capstone"
            style="@style/Capstone_txtstyle"/>
    </LinearLayout>
</RelativeLayout>
